Fix heading text overlapped issue

--- a/css/github-markdown-light.css
+++ b/css/github-markdown-light.css
@@ -271,14 +271,14 @@
   margin-top: 24px;
   margin-bottom: 16px;
   font-weight: 300;
-  line-height: 0.5;
+  line-height: 1.0;
   color: #F79646;
 }
 .markdown-body h2 {
   margin-top: 24px;
   margin-bottom: 16px;
   font-weight: 500;
-  line-height: 0.5;
+  line-height: 1.0;
   color: #F79646;
 }
 .markdown-body h3,
@@ -288,7 +288,7 @@
   margin-top: 24px;
   margin-bottom: 16px;
   font-weight: 500;
-  line-height: 0.5;
+  line-height: 1.0;
   color: #000000;
 }
 
